# Win-Control-Center

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/assets/: 2.C9ZQvW3D.css  2.vhg9uui_.css
.svelte-kit/output/client/_app/immutable/chunks/: ANMC2sv4.js  Bj4szm_k.js  C-At9pmp.js  CDXiM-W1.js  CdC4UQCJ.js  Cnxm6wJS.js  D-U0E7Jf.js  DEJiXCbA.js  Dgf7cJfp.js  DjfwDm1J.js  DoS_njpE.js  G0fV9zhJ.js  Rodr61xT.js  mOqeCVMl.js  poqk6lLb.js
.svelte-kit/output/client/_app/immutable/entry/: app.2jjApctt.js  app.CTnaDVFz.js  app.CW2i_MLA.js  app.DddUnH2Y.js  app.NUbAhrxi.js  app.RQKaiFow.js  start.BKwutBhx.js  start.BOVk6hCJ.js  start.Df6l7gkY.js
.svelte-kit/output/client/_app/immutable/nodes/: 1.BRE1pbft.js  1.DGp8Pgez.js
.svelte-kit/output/server/: manifest-full.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/_app/immutable/assets/: _page.BLPCsbnn.css  _page.BaVnjGIj.css  _page.C56WzyEQ.css  _page.CDO1zrj3.css
.svelte-kit/output/server/chunks/: index.js  internal.js
.svelte-kit/output/server/entries/pages/: _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
src-tauri/: Cargo.toml  build_error.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  display.rs  input.rs  lib.rs  main.rs
src/lib/components/: AppRow.svelte  Slider.svelte  Toggle.svelte
src/routes/: +page.svelte
