[package]
name = "win-control-center"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "win_control_center_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
brightness = "0.4"
futures = "0.3"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp", 
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Devices_Display",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Ole",
    "Win32_System_Variant", 
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Graphics_Gdi",
    "Win32_Media_Multimedia",
    "Win32_System_ProcessStatus",
    "implement",
    "Win32_Devices_FunctionDiscovery"
] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time"] }
base64 = "0.22.1"
image = { version = "0.25", default-features = false, features = ["png"] }
winreg = "0.52"


